--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/recaptcha-enterprise": "^6.4.0",
     "@types/nodemailer": "^7.0.9",
     "@types/react-google-recaptcha": "^2.1.9",
     "clsx": "^2.1.1",
