--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/recaptcha-enterprise": "^6.4.0",
     "@types/nodemailer": "^7.0.9",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@vercel/blob": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
