--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "@vercel/blob": "^2.2.0",
     "clsx": "^2.1.1",
+    "convex": "^1.31.7",
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
